tests/fixtures/dimensions/change_blast_radius/bad/u3.ts
import { core } from "./core";
export const u3 = core + 3;
